# memory-seek-backend-rs

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  example.config.json  example.config.yaml  must.config.yaml  readme.md  tmp.md
.github/workflows/: ci.yml  deploy.yml  (+2 more)
_server/: Cargo.toml
_server/src/: config.rs  main.rs  metrics.rs  state.rs
_server/src/middlewares/: auth.rs  mod.rs  trace_id.rs
_server/src/setup/: auth.rs  database.rs  log.rs  mod.rs  photo.rs  redis.rs  user.rs
benches/: readme.md
common/: Cargo.toml
common/src/: error.rs  lib.rs  models.rs  r.rs
common/src/constants/: mod.rs  password_concurrency.rs  password_hasher.rs
common/src/constants/redis_keys/: mod.rs  photo.rs  user.rs
common/src/error/: app_error.rs  db_err_ext.rs  mod.rs  repo_error.rs
common/src/ext/: base.rs  bool_ext.rs  mod.rs  ok_ext.rs  option_ext.rs  redis_ext.rs  result_err_ext.rs  result_ext.rs
common/src/extractors/: client_ip.rs  mod.rs  validated_json.rs  validated_query.rs
common/src/macros/: metrics_group.rs  metrics_success.rs  metrics_timed.rs  metrics_timer_name.rs  mod.rs
common/src/models/: cursor_page.rs  image_token.rs  mod.rs  user_id.rs
common/src/traits/: controller.rs
common/src/utils/: avatar.rs  bool_ext.rs  db_utils.rs  file_validator.rs  mod.rs  option_ext.rs  password.rs  password_hash.rs  rand_utils.rs  redis_ext.rs  result_ext.rs  token_cipher.rs
common/src/utils/metrics_ext/: metrics_concurrency_guard.rs  metrics_timer.rs  metrics_timer_ext.rs  mod.rs
common/src/utils/validators/: account.rs  email.rs  mod.rs  normal_chars.rs  password.rs  username.rs
domains/auth/: Cargo.toml
domains/auth/src/: config.rs  lib.rs  state.rs
domains/auth/src/client/: mod.rs  token_store.rs
domains/auth/src/controller/: auth_controller.rs  mod.rs  state.rs
domains/auth/src/models/: mod.rs
domains/auth/src/service/: mod.rs
domains/auth/src/services/: auth_service.rs  mod.rs
domains/auth/src/utils/: password.rs
domains/backup/: Cargo.toml
domains/backup/src/: config.rs  controller.rs  exporter.rs  hasher.rs  lib.rs  runner.rs  scheduler.rs  state.rs  storage.rs
domains/photo/: Cargo.toml
domains/photo/src/: lib.rs  state.rs
domains/photo/src/clustering/: mod.rs  union_find.rs  vector_utils.rs
domains/photo/src/controller/: collection_controller.rs  comment_controller.rs  face_controller.rs  mod.rs  photo_controller.rs  timeline_controller.rs
domains/photo/src/controllers/: collection_controller.rs  collection_photo_controller.rs  comment_controller.rs  comment_like_controller.rs  face_controller.rs  mod.rs  photo_controller.rs  photo_like_controller.rs  timeline_stat_controller.rs
domains/photo/src/mappers/: collection_mapper.rs  collection_photo_mapper.rs  comment_like_mapper.rs  comment_mapper.rs  face_feature_mapper.rs  face_person_mapper.rs  mod.rs  photo_like_mapper.rs  photo_mapper.rs  timeline_stat_mapper.rs
domains/photo/src/middlewares/: mod.rs
domains/photo/src/models/: collection.rs  comment.rs  common.rs  face.rs  mod.rs  photo.rs  timeline_stat.rs
domains/photo/src/services/: collection_photo_service.rs  collection_service.rs  comment_like_service.rs  comment_service.rs  face_service.rs  feature_service.rs  mod.rs  photo_like_service.rs  photo_service.rs  timeline_stat_service.rs
domains/photo/src/utils/: mod.rs  pinyin.rs
domains/user/: Cargo.toml
domains/user/src/: config.rs  lib.rs  state.rs
domains/user/src/client/: mod.rs
domains/user/src/controller/: mod.rs  state.rs  user_controller.rs
domains/user/src/models/: mod.rs
domains/user/src/services/: mod.rs  user_service.rs
entities/: Cargo.toml
entities/src/: collection.rs  collection_photo.rs  comment_like.rs  embedding.rs  face_feature.rs  face_person.rs  lib.rs  timeline_stat.rs  user.rs  vector.rs
entities/src/auth/: user.rs
entities/src/photo/: collection.rs  collection_photo.rs  comment.rs  comment_like.rs  face.rs  face_feature.rs  face_person.rs  mod.rs  person.rs  photo.rs  photo_like.rs  timeline_stat.rs
entities/src/photo_entities/: collection.rs  collection_photo.rs  comment.rs  comment_like.rs  face_feature.rs  face_person.rs  photo.rs  timeline_stat.rs
entities/src/user_entities/: user.rs
libs/face_engine/: Cargo.toml
libs/face_engine/src/: aligner.rs  base.rs  detector.rs  lazy_engine.rs  lib.rs  recognizer.rs  types.rs
libs/img_url_generator/: Cargo.toml
libs/img_url_generator/src/: alioss_generator.rs  crypto.rs  imgproxy_generator.rs  lib.rs
libs/oss/: Cargo.toml
libs/oss/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  state.rs
server/src/config/: mod.rs
server/src/metrics/: database.rs  mod.rs  redis.rs  system.rs
server/src/middlewares/: auth.rs  cors.rs  mod.rs  trace_id.rs
server/src/setup/: mod.rs
server/src/setup/bases/: database.rs  log.rs  metrics.rs  mod.rs  redis.rs
server/src/setup/domains/: auth.rs  backup.rs  mod.rs  photo.rs  user.rs
server/src/setup/libs/: email.rs  face_engine.rs  mod.rs  s3.rs  token_cipher.rs
server/tests/: main.rs  photo_like.rs  test.config.json  test.config.yaml
server/tests/auth/: login.rs  mod.rs  register.rs
server/tests/backup/: backup_test.rs  mod.rs
server/tests/helpers/: app.rs  auth.rs  db.rs  mod.rs  photo.rs  photo_like.rs
server/tests/photo/: common.rs  delete_photos.rs  get_photos.rs  md5s_exist.rs  mod.rs  upload.rs
server/tests/photo/collection/: create.rs  delete.rs  get_list.rs  mod.rs  update.rs
server/tests/photo/collection_photo/: add_batch.rs  get_photos.rs  mod.rs  remove.rs  remove_batch.rs
server/tests/photo/comment/: delete.rs  get_comments.rs  like.rs  mod.rs  publish.rs  unlike.rs
server/tests/photo/photo/: delete_photos.rs  get_photos.rs  md5s_exist.rs  upload.rs
server/tests/photo/photo_ops/: delete_photos.rs  get_photos.rs  md5s_exist.rs  mod.rs  upload.rs
server/tests/photo/timeline/: stats.rs
server/tests/user/: batch.rs  change_nickname.rs  change_password.rs  get_user_info.rs  inviter_code.rs  logout.rs  mod.rs
tests/: main.rs
(+169 files in other folders)
