[workspace]
members = [
    "common",
    "domains/auth",
    "domains/user",
    "domains/photo",
    "server",
    "libs/oss",
    "libs/email",
    "libs/face_engine",
    "libs/img_url_generator",
    "entities"
]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
pgvector = "0.4.1"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
serde_with = "3.17.0"
bcrypt = "0.19.0"
redis = "1.0.4"
deadpool-redis = "0.23.0"
rand = "0.10.0"
hex = "0.4.3"
validator = { version="0.20.0", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.12.3"
lettre = { version = "0.11.19", features = ["tokio1-native-tls", "hostname", "builder"] }

uuid = { version = "1.21.0", features = ["v4"] }
futures = "0.3.32"
const_format = "0.2.35"
image = "0.25.9"
config = "0.15.19"
dotenvy = "0.15.7"
async-trait = "0.1.89"

md5 = "0.8.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17.2"
