[workspace]
resolver = "3"
members = [
    "common",
    "entities",
    "libs/email",
    "libs/img_url_generator",
    "libs/oss",
    "domains/constants",
    "domains/auth",
    "domains/user",
    "domains/photo",
    "server"
]

[workspace.dependencies]
memory-seek-type = { git="https://github.com/mo7984130/memory-seek-type.git" }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros"
] }
pgvector = { version = "0.4.1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
serde_with = "3.17.0"
bcrypt = "0.19.0"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
redis = "1.0.4"
deadpool-redis = "0.23.0"
rand = "0.10.0"
hex = "0.4.3"
validator = { version="0.20.0", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.12.3"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "hostname", "builder"] }
uuid = { version = "1.21.0", features = ["v4"] }
futures = "0.3.32"
futures-core = "0.3.32"
tokio-util = { version = "0.7", features = ["io"] }
const_format = "0.2.35"
image = "0.25.9"
config = "0.15.19"
dotenvy = "0.15.7"
async-trait = "0.1.89"

md5 = "0.8.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hkdf = "0.12.4"

ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "tls-rustls", "ndarray"] }
ndarray = "0.17.2"
num_cpus = "1.17.0"
pinyin = "0.11.0"

# 性能监控
metrics = "0.24.3"

# HTTP & S3
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
s3 = { package = "rust-s3", version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
bytes = "1.10"
axum-client-ip = "1.3.1"

moka = { version = "0.12.15", features = ["future"] }

# 性能测试
criterion = { version = "0.5", features = ["async_tokio"] }
hdrhistogram = "7.5"
tokio-test = "0.4"
wiremock = "0.6"

indexmap = "2.14.0"
