[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = ["metrics"]
metrics = ["dep:metrics"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
futures = { workspace = true }
const_format = { workspace = true }
rand = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }
fancy-regex = "0.17.0"
axum-client-ip = { workspace = true }
metrics = { workspace = true, optional = true }
bcrypt = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
num_cpus = { workspace = true }
aes-gcm = "0.10"
hkdf = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
