[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[features]
default = []
face-engine = ["dep:insight-face-rs", "insight-face-rs/pgvector", "dep:serde_json", "sea-orm/postgres-vector"]

[dependencies]
sea-orm = { workspace = true, features = ["sqlx-postgres", "macros"] }
serde = { workspace = true, features = ["derive"] }
common = { path = "../common" }
memory-seek-type = { workspace = true }
insight-face-rs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true }
pgvector.workspace = true
