[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[features]
default = []
metrics = ["common/metrics", "dep:metrics"]
controller = ["dep:axum", "dep:serde_json"]

[dependencies]
common = { path = "../../common" }
sea-orm = { workspace = true }
entities = { path = "../../entities" }
serde = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
email = { path = "../../libs/email" }
bcrypt = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
img_url_generator = { path = "../../libs/img_url_generator" }

axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
