[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[features]
default = []
metrics = ["common/metrics", "dep:metrics"]
controller = ["dep:axum", "dep:serde_json"]

[dependencies]
common = { path = "../../common", features = ["validators"] }
constants = { path = "../constants" }
sea-orm = { workspace = true }
entities = { path = "../../entities" }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
validator = { workspace = true }
chrono = { workspace = true }
email = { path = "../../libs/email" }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

num_cpus = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hdrhistogram = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
