[package]
name = "backup"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

csv = "1.3"
tokio-cron-scheduler = "0.13"

# S3
oss = { path = "../../libs/oss" }

# 错误处理
common = { path = "../../common" }
