[package]
name = "backup"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

csv = { workspace = true }
tokio-cron-scheduler = { workspace = true }

# S3
oss = { path = "../../libs/oss" }

# HTTP / 控制器
axum = { workspace = true }

# 实体（UserId）
entities = { path = "../../entities" }

# 错误处理
common = { path = "../../common" }
