[package]
name = "photo"
version = "0.1.0"
edition = "2024"

[features]
default = []
face_recognition = ["dep:face_engine", "dep:ndarray", "dep:rayon"]

[dependencies]
common = { path = "../../common" }
entities = { path = "../../entities" }
oss = { path = "../../libs/oss" }
img_url_generator = { path = "../../libs/img_url_generator" }
face_engine = { path = "../../libs/face_engine", optional = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
md5 = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
deadpool-redis = { workspace = true }
num_cpus = { workspace = true }
rayon = { version = "1.11.0", optional = true }
ndarray = { version = "0.16", features = ["rayon"], optional = true }
pinyin = { workspace = true }
base64 = { workspace = true }
