[package]
name = "photo"
version = "0.1.0"
edition = "2024"

[features]
default = []
metrics = ["common/metrics"]
controller = ["dep:axum"]
file_validator = ["common/file_validator"]

[dependencies]
common = { path = "../../common", features = ["validators", "file_validator"] }
constants = { path = "../constants" }
entities = { path = "../../entities" }
oss = { path = "../../libs/oss" }
img_url_generator = { path = "../../libs/img_url_generator" }

axum = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
deadpool-redis = { workspace = true }
base64 = { workspace = true }
moka = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
