[package]
name = "user"
version = "0.1.0"
edition = "2024"

[features]
default = ["metrics"]
metrics = ["common/metrics", "dep:metrics"]
controller = ["dep:axum"]

[dependencies]
common = { path = "../../common" }
entities = { path = "../../entities" }
oss = { path = "../../libs/oss" }
img_url_generator = { path = "../../libs/img_url_generator" }
serde = { version = "1.0.228", features = ["derive"] }
validator = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true, optional = true }
tokio = { workspace = true }
axum = { workspace = true, optional = true }
num_cpus = { workspace = true }
