[package]
name = "user"
version = "0.1.0"
edition = "2024"

[features]
default = []
metrics = ["common/metrics", "dep:metrics"]
controller = ["dep:axum"]

[dependencies]
common = { path = "../../common", features = ["file_validator"] }
constants = { path = "../constants" }
entities = { path = "../../entities" }
oss = { path = "../../libs/oss" }
serde = { version = "1.0.228", features = ["derive"] }
validator = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
num_cpus = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
