[package]
name = "face_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
imageproc = "0.25"
serde = { workspace = true }
tokio = { workspace = true }
