[package]
name = "img_url_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
oss = { path = "../oss" }
aes-gcm = "0.10"
thiserror = "2.0"
