[package]
name = "img_url_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
oss = { path = "../oss" }
thiserror = "2.0"
