[package]
name = "oss"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
serde = { workspace = true }
bytes = "1.10"

rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }