[package]
name = "oss"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
serde = { workspace = true }
bytes = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
s3 = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
